--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <img class="clouda"src="C:\Users\MANISH KAUSHIK\Documents\personal project 2nd\css 2nd\images\cloud.png" alt="one piece">
     <h1>"I am Zoro"</h1>
     <h2>Strogest Swordsman</h2>
-    <img class="cloudb"src="C:\Users\MANISH KAUSHIK\Documents\personal project 2nd\css 2nd\images\cloud.png" alt="one piece">
-    <img class="monut"src="C:\Users\MANISH KAUSHIK\Documents\personal project 2nd\css 2nd\images\mountain.png" alt="zoroo">
+    <img class="cloudb"src="cloud.png" alt="one piece">
+    <img class="monut"src="mountain.png" alt="zoroo">
   </div>
 <div class="middle">
   <div class="profile">
-    <img class="prof" src="C:\Users\MANISH KAUSHIK\Pictures\Saved Pictures\images.jpg" alt="zoro profile photo">
+    <img class="prof" src="images.jpg" alt="zoro profile photo">
     <h2>Hello.</h2>
 <p>I am  righthand man and swordsman in strawhat pirates.</p>
   </div>
@@ -31,13 +31,13 @@
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="fun" src="C:\Users\MANISH KAUSHIK\Pictures\Saved Pictures\images (1).jpg" alt="drinking">
+      <img class="fun" src="images (1).jpg" alt="drinking">
       <h3>Drinking</h3>
       <p>i can drink for 24 hours <br>i never gets drunk
       </p>
       </div>
     <div class="skill-row">
-      <img class="funn" src="C:\Users\MANISH KAUSHIK\Pictures\Saved Pictures\images (2).jpg" alt="fight">
+      <img class="funn" src="images (2).jpg" alt="fight">
       <h3>Fighting</h3>
     <p> I aspire to be "the worlds strongest swordsmam" and up until konw i have defeated several opponents and have gone beyond plus ultra several times.one time i allmost died but i forgot the path of <srtong>
   HELL
