--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="top">
-    <img class="clouda"src="C:\Users\MANISH KAUSHIK\Documents\personal project 2nd\css 2nd\images\cloud.png" alt="one piece">
+    <img class="clouda"src="cloud.png" alt="one piece">
     <h1>"I am Zoro"</h1>
     <h2>Strogest Swordsman</h2>
     <img class="cloudb"src="cloud.png" alt="one piece">
